Fixed horizontal alignment in site

--- a/server/static-assets/index.css
+++ b/server/static-assets/index.css
@@ -77,7 +77,7 @@ a {
   display: inline-block;
   vertical-align: top;
   padding: 30px;
-  max-width: 390px;
+  width: 250px;
 }
 
 
